Update to run with TCK built on TestNG
Signed-off-by: Andy McCright <j.andrew.mccright@gmail.com>

--- a/src/test/arq-liberty-managed/logging.properties
+++ b/src/test/arq-liberty-managed/logging.properties
@@ -20,4 +20,4 @@ java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
 # Configure WAS Container classes to FINEST; everything else to INFO
 .level= INFO
-io.openliberty.arquillian.level = FINEST
+jakarta.ws.rs.tck.level = FINEST
